kubernetes/apps/flux-system/headlamp/app/httproute.yaml
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames: ["${SUBDOMAIN}.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
